P4PU-1257 Added broker info retrieval by ID or external ID
