# openapi/generated.openapi.json
@@ -123,17 +123,24 @@
         } ]
       }
     },
-    "/brokers/{brokerId}" : {
+    "/brokers" : {
       "get" : {
         "tags" : [ "Broker" ],
         "operationId" : "getBrokerInfo",
         "parameters" : [ {
           "name" : "brokerId",
-          "in" : "path",
-          "required" : true,
+          "in" : "query",
+          "required" : false,
           "schema" : {
             "type" : "integer",
             "format" : "int64"
+          }
+        }, {
+          "name" : "externalId",
+          "in" : "query",
+          "required" : false,
+          "schema" : {
+            "type" : "string"
           }
         } ],
         "responses" : {
@@ -1909,6 +1916,13 @@
       "BrokerInfoDTO" : {
         "type" : "object",
         "properties" : {
+          "brokerId" : {
+            "type" : "integer",
+            "format" : "int64"
+          },
+          "externalId" : {
+            "type" : "string"
+          },
           "brokerName" : {
             "type" : "string"
           },
@@ -1923,7 +1937,7 @@
             "type" : "string"
           }
         },
-        "required" : [ "brokerFiscalCode", "brokerName" ]
+        "required" : [ "brokerFiscalCode", "brokerId", "brokerName" ]
       },
       "OrganizationsWithSpontaneousDTO" : {
         "type" : "object",
